Fix scrolling issues and always visible scrollbars

--- a/src/styles/popup/view/accounts.less
+++ b/src/styles/popup/view/accounts.less
@@ -100,6 +100,10 @@
         border-bottom-left-radius: 2px;
         border-bottom-right-radius: 2px;
 
+        button.list {
+            display: flex;
+        }
+
         button.list:first-child {
             border-top: transparent;
         }
